[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/body.png" type="Texture" id=1]
[ext_resource path="res://sprites/gun03.png" type="Texture" id=2]
[ext_resource path="res://sprites/body_shaddow.png" type="Texture" id=3]
[ext_resource path="res://sprites/tank_wheels-Sheet.png" type="Texture" id=4]
[ext_resource path="res://scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://sprites/gun01.png" type="Texture" id=6]
[ext_resource path="res://sprites/gun02.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0651
height = 13.0115

[sub_resource type="Animation" id=5]
resource_name = "event"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("left_guns:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 0.999999 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "event"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("right_guns:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 0 ), Vector2( 0, 0 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="feets" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 3 )

[node name="shadows" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 3 )

[node name="body" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="left_guns" type="Node2D" parent="."]

[node name="missile" type="Sprite" parent="left_guns"]
position = Vector2( -4, -21 )
rotation = -1.5708
texture = ExtResource( 7 )

[node name="laser" type="Sprite" parent="left_guns"]
visible = false
position = Vector2( 0, -19 )
rotation = -1.5708
texture = ExtResource( 6 )

[node name="gun" type="Sprite" parent="left_guns"]
visible = false
position = Vector2( -5, -24 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="right_guns" type="Node2D" parent="."]

[node name="missile" type="Sprite" parent="right_guns"]
visible = false
position = Vector2( -2, 19 )
rotation = -1.5708
scale = Vector2( -1, 1 )
texture = ExtResource( 7 )

[node name="laser" type="Sprite" parent="right_guns"]
visible = false
position = Vector2( 0, 19 )
rotation = -1.5708
scale = Vector2( -1, 1 )
texture = ExtResource( 6 )

[node name="gun" type="Sprite" parent="right_guns"]
visible = false
position = Vector2( -5, 24 )
rotation = -1.5708
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="muzzles" type="Node2D" parent="."]

[node name="left_muzzle_laser" type="Position2D" parent="muzzles"]
position = Vector2( -15, -19 )

[node name="left_muzzle_gun" type="Position2D" parent="muzzles"]
position = Vector2( -22, -24 )

[node name="left_muzzle_missile" type="Position2D" parent="muzzles"]
position = Vector2( -33, -20 )

[node name="right_muzzle_laser" type="Position2D" parent="muzzles"]
position = Vector2( -15, 19 )

[node name="right_muzzle_gun" type="Position2D" parent="muzzles"]
position = Vector2( -22, 24 )

[node name="right_muzzle_missile" type="Position2D" parent="muzzles"]
position = Vector2( -33, 18 )

[node name="timer_left" type="Timer" parent="."]

[node name="timer_right" type="Timer" parent="."]

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
shape = SubResource( 4 )

[node name="shoot_anim_left" type="AnimationPlayer" parent="."]
anims/event = SubResource( 5 )

[node name="shoot_anim_right" type="AnimationPlayer" parent="."]
anims/event = SubResource( 6 )

[connection signal="timeout" from="timer_left" to="." method="_on_timer_left_timeout"]
[connection signal="timeout" from="timer_right" to="." method="_on_timer_right_timeout"]
